# sqs-api

./: .env  .env.example  .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py
