  [build-system]
  requires = ["setuptools>=61.0", "wheel"]
  build-backend = "setuptools.build_meta"

  [project]
  name = "sqs-api"
  version = "1.0.0"
  description = "API RESTful para integração com AWS SQS"
  authors = [
      {name = "Raissa Santana", email = "passos.r96@gmail.com"}
  ]
  readme = "README.md"
  requires-python = ">=3.11"

  dependencies = [
      "fastapi>=0.104.0",
      "uvicorn[standard]>=0.24.0",
      "boto3>=1.34.0",
      "pydantic>=2.5.0",
      "pydantic-settings>=2.0.0",
  ]

  [project.optional-dependencies]
  dev = [
      "pytest>=7.4.0",
      "pytest-asyncio>=0.21.0",
      "httpx>=0.25.0",
  ]